--- a/theme/partials/footer.liquid
+++ b/theme/partials/footer.liquid
@@ -1,23 +1,21 @@
 <div class="footer wf-section">
     <div class="row w-row">
       <div class="column w-col w-col-4">
-        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120"' -%}
+        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
           <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
         </div>
       </div>
       <div class="w-col w-col-3">
         <div class="div-block-2">
-          <div class="text-block-1">{{ texts.-657ae5c3 }}</div>
+          <div class="text-block-1">{{ texts.-6beb6ac0 }}</div>
           <a href="{{ links.525165e8 }}" class="link-footer">{{ texts.6451f65d }}</a>
           <a href="{{ links.55e45e1b }}" class="link-footer">{{ texts.3eda8ca }}</a>
           <a href="{{ links.-2c4698f7 }}" class="link-footer">{{ texts.37bce494 }}</a>
           <a href="{{ links.-6b750f0c }}" class="link-footer">{{ texts.-1dca6e3f }}</a>
-          <a href="{{ links.-7ff00f38 }}" class="link-footer">{{ texts.-6cd00407 }}</a>
           <a href="{{ links.381f0123 }}" class="link-footer">{{ texts.68fb3ac9 }}</a>
           <a href="{{ links.-aa82943 }}" class="link-footer">{{ texts.-48d59d5c }}</a>
           <a href="{{ links.65bace98 }}" class="link-footer">{{ texts.-797026b7 }}</a>
           <a href="{{ links.75d156a6 }}" class="link-footer">{{ texts.-18947bda }}</a>
-          <a href="{{ links.75d156a6 }}" class="link-footer">{{ texts.-770e9e29 }}</a>
         </div>
       </div>
       <div class="w-col w-col-5">
@@ -28,13 +26,13 @@
           <a href="{{ links.3ce9a87c }}" class="link-footer-telefono">{{ texts.16679d29 }}</a>
           <div class="text-block-1">{{ texts.78bcd6e2 }}</div>
           <a href="{{ links.23 }}" class="link-footer">{{ texts.1025b521 }}<br>{{ texts.2c90fff5 }}</a>
-          <a href="{{ links.-4886a790 }}" target="_blank" class="link-footer small-underline">{{ texts.-6e2fc850 }}</a>
+          <a href="{{ links.-4886a790 }}" target="_blank" rel="noreferrer" class="link-footer small-underline">{{ texts.-6e2fc850 }}</a>
         </div>
       </div>
     </div>
     <div class="div-text-footer-rr">
       <div class="text-footer-rr">{{ texts.-50284710 }}</div>
-      <a href="{{ links.23 }}" class="text-footer-rr">{{ texts.-59b3b63d }}</a>
+      <a href="{{ links.-b70c173 }}" rel="noopener" target="_blank" class="text-footer-rr">{{ texts.-2df564eb }}</a>
     </div>
     <div class="div-footer-boton">
       <a href="{{ links.16bdc17e }}" class="contacto">{{ texts.-1df83b91 }}</a>
