--- a/theme/partials/menu.liquid
+++ b/theme/partials/menu.liquid
@@ -1,57 +1,58 @@
 <div class="menu">
-      <div class="w-embed w-iframe">
-        <!--  Google Tag Manager (noscript)  -->
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-        <!--  End Google Tag Manager (noscript)  -->
-      </div>
-      <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
-        <div class="div-block-12">
-          <a href="{{ links.2f }}" aria-current="page" class="brand-3 w-nav-brand w--current">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":991,"size":"75px"},{"max":10000,"size":"7vw"}]', 'width="75" class="logo"' -%}</a>
-          <nav role="navigation" class="nav-menu w-nav-menu">
-            <div class="div-block-13">
-              <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
-                <div class="dropdown-toggle w-dropdown-toggle">
-                  <a href="{{ links.525165e8 }}" class="link-block-4 w-inline-block">
-                    <div class="nav-link-dropdown light">{{ texts.6451f65d }}</div>
-                    <div class="icon w-icon-dropdown-toggle"></div>
-                  </a>
-                </div>
-                <nav class="dropdown-list w-dropdown-list">
-                  <a href="{{ links.3d2ce2b8 }}" class="dropdown-link w-dropdown-link">{{ texts.6176fac4 }}</a>
-                  <a href="{{ links.-47a2312a }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
-                  <a href="{{ links.-5f7c817c }}" class="dropdown-link w-dropdown-link">{{ texts.37bce494 }}</a>
-                  <a href="{{ links.-33d9e40b }}" class="dropdown-link w-dropdown-link">{{ texts.46cbae7 }}</a>
-                  <a href="{{ links.6f319201 }}" class="dropdown-link w-dropdown-link">{{ texts.-339acbad }}</a>
-                  <a href="{{ links.2f845877 }}" class="dropdown-link w-dropdown-link">{{ texts.-18947bda }}</a>
-                </nav>
+    <div class="w-embed w-iframe">
+      <!--  Google Tag Manager (noscript)  -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!--  End Google Tag Manager (noscript)  -->
+    </div>
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+      <div class="div-block-12">
+        <a href="{{ links.2f }}" aria-current="page" class="brand-3 w-nav-brand w--current">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":991,"size":"75px"},{"max":10000,"size":"7vw"}]', 'width="95" height="98" class="logo"' -%}
+          <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
+        </a>
+        <nav role="navigation" class="nav-menu w-nav-menu">
+          <div class="div-block-13">
+            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+              <div class="dropdown-toggle w-dropdown-toggle">
+                <a href="{{ links.525165e8 }}" class="link-block-4 w-inline-block">
+                  <div class="nav-link-dropdown light">{{ texts.6451f65d }}</div>
+                  <div class="icon w-icon-dropdown-toggle"></div>
+                </a>
               </div>
-              <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
-                <div class="dropdown-toggle w-dropdown-toggle">
-                  <a href="{{ links.55e45e1b }}" class="link-block-4 w-inline-block">
-                    <div class="nav-link-dropdown light">{{ texts.3eda8ca }}</div>
-                    <div class="icon w-icon-dropdown-toggle"></div>
-                  </a>
-                </div>
-                <nav class="dropdown-list w-dropdown-list">
-                  <a href="{{ links.6cb061f2 }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
-                  <a href="{{ links.-70b638cd }}" class="dropdown-link w-dropdown-link">{{ texts.3cfcd46 }}</a>
-                  <a href="{{ links.24640bbc }}" class="dropdown-link w-dropdown-link">{{ texts.33226165 }}</a>
-                </nav>
+              <nav class="dropdown-list w-dropdown-list">
+                <a href="{{ links.3d2ce2b8 }}" class="dropdown-link w-dropdown-link">{{ texts.6176fac4 }}</a>
+                <a href="{{ links.-47a2312a }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                <a href="{{ links.-5f7c817c }}" class="dropdown-link w-dropdown-link">{{ texts.37bce494 }}</a>
+                <a href="{{ links.-33d9e40b }}" class="dropdown-link w-dropdown-link">{{ texts.46cbae7 }}</a>
+                <a href="{{ links.6f319201 }}" class="dropdown-link w-dropdown-link">{{ texts.-339acbad }}</a>
+                <a href="{{ links.2f845877 }}" class="dropdown-link w-dropdown-link">{{ texts.-18947bda }}</a>
+              </nav>
+            </div>
+            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+              <div class="dropdown-toggle w-dropdown-toggle">
+                <a href="{{ links.55e45e1b }}" class="link-block-4 w-inline-block">
+                  <div class="nav-link-dropdown light">{{ texts.3eda8ca }}</div>
+                  <div class="icon w-icon-dropdown-toggle"></div>
+                </a>
               </div>
-              <a href="{{ links.-6b750f0c }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
-              <a href="{{ links.-2c4698f7 }}" class="nav-link light">{{ texts.37bce494 }}</a>
-              <a href="{{ links.-7ff00f38 }}" class="nav-link light">{{ texts.-6cd00407 }}</a>
-              <a href="{{ links.381f0123 }}" class="nav-link light">{{ texts.75617034 }}</a>
-              <a href="{{ links.-aa82943 }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+              <nav class="dropdown-list w-dropdown-list">
+                <a href="{{ links.6cb061f2 }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                <a href="{{ links.-70b638cd }}" class="dropdown-link w-dropdown-link">{{ texts.3cfcd46 }}</a>
+                <a href="{{ links.24640bbc }}" class="dropdown-link w-dropdown-link">{{ texts.33226165 }}</a>
+              </nav>
             </div>
-            <div class="nav-menu-right">
-              <a href="{{ links.16bdc17e }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
-              <a href="{{ links.768ad3ac }}" class="telefono">{{ texts.-70c0b1fd }}</a>
-            </div>
-          </nav>
-          <div class="menu-button w-nav-button">
-            <div class="icon-4 w-icon-nav-menu"></div>
+            <a href="{{ links.-6b750f0c }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
+            <a href="{{ links.-2c4698f7 }}" class="nav-link light">{{ texts.37bce494 }}</a>
+            <a href="{{ links.381f0123 }}" class="nav-link light">{{ texts.75617034 }}</a>
+            <a href="{{ links.-aa82943 }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
           </div>
+          <div class="nav-menu-right">
+            <a href="{{ links.16bdc17e }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
+            <a href="{{ links.768ad3ac }}" class="telefono">{{ texts.-70c0b1fd }}</a>
+          </div>
+        </nav>
+        <div class="menu-button w-nav-button">
+          <div class="icon-4 w-icon-nav-menu"></div>
         </div>
       </div>
     </div>
+  </div>
