--- a/theme/partials/footer.liquid
+++ b/theme/partials/footer.liquid
@@ -25,7 +25,7 @@
           <div class="text-block-1">{{ texts.7708558d }}</div>
           <a href="{{ links.3ce9a87c }}" class="link-footer-telefono">{{ texts.16679d29 }}</a>
           <div class="text-block-1">{{ texts.78bcd6e2 }}</div>
-          <a href="{{ links.23 }}" class="link-footer">{{ texts.1025b521 }}<br>{{ texts.2c90fff5 }}</a>
+          <a href="{{ links.23 }}" class="link-footer">{{ texts.-ed7a307 }}</a>
           <a href="{{ links.-4886a790 }}" target="_blank" rel="noreferrer" class="link-footer small-underline">{{ texts.-6e2fc850 }}</a>
         </div>
       </div>
