--- a/theme/partials/menu.liquid
+++ b/theme/partials/menu.liquid
@@ -53,7 +53,10 @@
           </div>
         </nav>
         <div class="menu-button w-nav-button">
-          <div class="icon-4 w-icon-nav-menu"></div>
+          <div class="con-menu-servicios">
+            <div>{{ texts.-657ae5c3 }}</div>
+            <div class="icon-4 w-icon-nav-menu"></div>
+          </div>
         </div>
       </div>
     </div>
