--- a/cms/pages/sitemap.njk
+++ b/cms/pages/sitemap.njk
@@ -9,13 +9,13 @@ eleventyExcludeFromCollections: true
 {%- if page.data.seo.noindex == false -%}
 <url>
     <loc>{{ settings.site.domain }}{{ page.url | url }}</loc>
-    <lastmod>{{ page.date.toISOString() }}</lastmod>
+    <lastmod>{{ page.date | dateLastMod }}</lastmod>
 </url>
 {%- endif -%}
 {% else %}
 <url>
     <loc>{{ settings.site.domain }}{{ page.url | url }}</loc>
-    <lastmod>{{ page.date.toISOString() }}</lastmod>
+    <lastmod>{{ page.date | dateLastMod }}</lastmod>
 </url>
 {%- endif %}
 {%- endfor %}
