--- a/theme/partials/footer.liquid
+++ b/theme/partials/footer.liquid
@@ -1,7 +1,7 @@
 <div class="footer wf-section">
     <div class="row w-row">
       <div class="column w-col w-col-4">
-        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":479,"size":"85vw"},{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
           <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
         </div>
       </div>
