--- a/theme/partials/forma-fibra.liquid
+++ b/theme/partials/forma-fibra.liquid
@@ -10,22 +10,7 @@
               <option value="Fibra de vidrio">{{ texts.37bce494 }}</option>
               <option value="Muro verde">{{ texts.-533f0677 }}</option>
               <option value="Otro">{{ texts.25ab02 }}</option>
-            </select><label for="Superficie" class="paragraph">{{ texts.-3ada762e }}</label><input type="text" class="text-field w-input" maxlength="256" name="Superficie" data-name="Superficie" placeholder="" id="Superficie"><label for="Ciudad" class="paragraph">{{ texts.78530878 }}</label><input type="text" class="text-field w-input" maxlength="256" name="Ciudad" data-name="Ciudad" placeholder="" id="Ciudad"><label for="Codigo-postal" class="paragraph">{{ texts.29c3690e }}</label><input type="text" class="text-field w-input" maxlength="256" name="Codigo-postal" data-name="Codigo postal" placeholder="" id="Codigo-postal"><label for="Mensaje-3" class="paragraph">{{ texts.-15f69c }}</label><textarea id="Mensaje-2" name="Mensaje-2" maxlength="5000" data-name="Mensaje 2" placeholder="" class="text-field w-input"></textarea><input type="text" class="bucket-field w-input" maxlength="256" name="field" data-name="field" placeholder="" id="bucket">
-            <div class="embed-recaptcha">
-              <div class="html-embed w-embed w-script">
-                <div class="g-recaptcha" data-sitekey="6LfZp9wUAAAAAElN6hjxGC8JFb3-WClC5dZnz7dZ"></div>
-                <script>
-function validateRecaptcha() {
-    var response = grecaptcha.getResponse();
-    if (response.length === 0) {
-        alert("Validar formulario No soy un Robot");
-        return false;
-    } 
-}
-</script>
-              </div>
-            </div><input type="submit" value="Enviar formulario" data-wait="Un momento" class="boton-naranja full-width w-button">
-          </form>
+            </select><label for="Superficie" class="paragraph">{{ texts.-3ada762e }}</label><input type="text" class="text-field w-input" maxlength="256" name="Superficie" data-name="Superficie" placeholder="" id="Superficie"><label for="Ciudad" class="paragraph">{{ texts.78530878 }}</label><input type="text" class="text-field w-input" maxlength="256" name="Ciudad" data-name="Ciudad" placeholder="" id="Ciudad"><label for="Codigo-postal" class="paragraph">{{ texts.29c3690e }}</label><input type="text" class="text-field w-input" maxlength="256" name="Codigo-postal" data-name="Codigo postal" placeholder="" id="Codigo-postal"><label for="Mensaje-3" class="paragraph">{{ texts.-15f69c }}</label><textarea id="Mensaje-2" name="Mensaje-2" maxlength="5000" data-name="Mensaje 2" placeholder="" class="text-field w-input"></textarea><input type="text" class="bucket-field w-input" maxlength="256" name="field" data-name="field" placeholder="" id="bucket"><input type="submit" value="Enviar formulario" data-wait="Un momento" class="boton-naranja full-width w-button"></form>
           <div class="w-form-done">
             <div>{{ texts.5a0ea5a1 }}</div>
           </div>
