--- a/theme/partials/forma-fibra.liquid
+++ b/theme/partials/forma-fibra.liquid
@@ -1,27 +1,35 @@
 <div class="form-block w-form">
-          <form id="wf-form-Formulario" name="wf-form-Formulario" data-name="ulario" action="https://formbucket.com/f/buk_CmvIDiUbZcB7Ad7m8bWap0Vc" method="post" data-ajax="true"><label for="Nombre-3" class="paragraph">{{ texts.5609e9b3 }}</label><input type="text" class="text-field w-input" maxlength="256" name="Nombre" data-name="Nombre" placeholder="" id="Nombre-3"><label for="Correo-3" class="paragraph">{{ texts.6a025917 }}</label><input type="email" class="text-field w-input" maxlength="256" name="Correo" data-name="Correo" placeholder="" id="Correo-3" required=""><label for="Celular" class="paragraph">{{ texts.5dcc7d8a }}</label><input type="tel" class="text-field w-input" maxlength="256" name="Celular" data-name="Celular" placeholder="" id="Celular"><label for="Estado-Y-Ciudad-4" class="paragraph"><strong>{{ texts.-4591a97 }}</strong></label><label for="Interes-2" class="paragraph">{{ texts.-3d3ece5 }}</label><select id="Interes-2" name="Interes" data-name="Interes" required="" class="w-select">
-              <option value="Piso de madera">{{ texts.39113658 }}</option>
-              <option value="Pergolado">{{ texts.-6a2e4f1b }}</option>
-              <option value="Second">{{ texts.3c4172cd }}</option>
-              <option value="Deck">{{ texts.2070c9 }}</option>
-              <option value="Sauna">{{ texts.4bf7bba }}</option>
-              <option value="Carpintería residencial">{{ texts.68fb3ac9 }}</option>
-              <option value="Mantenimiento">{{ texts.-18947bda }}</option>
-              <option value="Fibra de vidrio">{{ texts.37bce494 }}</option>
-              <option value="Muro verde">{{ texts.-533f0677 }}</option>
-              <option value="Otro">{{ texts.25ab02 }}</option>
-            </select><label for="Superficie" class="paragraph">{{ texts.-3ada762e }}</label><input type="text" class="text-field w-input" maxlength="256" name="Superficie" data-name="Superficie" placeholder="" id="Superficie"><label for="Ciudad" class="paragraph">{{ texts.78530878 }}</label><input type="text" class="text-field w-input" maxlength="256" name="Ciudad" data-name="Ciudad" placeholder="" id="Ciudad"><label for="Codigo-postal" class="paragraph">{{ texts.29c3690e }}</label><input type="text" class="text-field w-input" maxlength="256" name="Codigo-postal" data-name="Codigo postal" placeholder="" id="Codigo-postal"><label for="Mensaje-3" class="paragraph">{{ texts.-15f69c }}</label><textarea id="Mensaje-2" name="Mensaje-2" maxlength="5000" data-name="Mensaje 2" placeholder="" class="text-field w-input"></textarea><input type="text" class="bucket-field w-input" maxlength="256" name="bucket" data-name="bucket" placeholder="" id="bucket-id">
-            <div class="embed-recaptcha">
-              <div class="html-embed w-embed w-script">
-                <div class="g-recaptcha" data-sitekey="6LfZp9wUAAAAAElN6hjxGC8JFb3-WClC5dZnz7dZ"></div>
-                
-              </div>
-            </div><input type="submit" value="Enviar formulario" data-wait="Un momento" class="boton-naranja full-width w-button">
-          </form>
-          <div class="w-form-done">
-            <div>{{ texts.-6065ad13 }}</div>
-          </div>
-          <div class="w-form-fail">
-            <div>{{ texts.-7c112e99 }}</div>
-          </div>
-        </div>
+                  <form id="wf-form-Formulario" name="wf-form-Formulario" data-name="ulario" action="https://formbucket.com/f/buk_CmvIDiUbZcB7Ad7m8bWap0Vc" method="post" data-ajax="true"><label for="Nombre-3" class="paragraph">{{ texts.5609e9b3 }}</label><input type="text" class="text-field w-input" maxlength="256" name="Nombre" data-name="Nombre" placeholder="" id="Nombre-3"><label for="Correo-3" class="paragraph">{{ texts.6a025917 }}</label><input type="email" class="text-field w-input" maxlength="256" name="Correo" data-name="Correo" placeholder="" id="Correo-3" required=""><label for="Celular" class="paragraph">{{ texts.5dcc7d8a }}</label><input type="tel" class="text-field w-input" maxlength="256" name="Celular" data-name="Celular" placeholder="" id="Celular"><label for="Estado-Y-Ciudad-4" class="paragraph"><strong>{{ texts.-4591a97 }}</strong></label><label for="Interes-2" class="paragraph">{{ texts.-3d3ece5 }}</label><select id="Interes-2" name="Interes" data-name="Interes" required="" class="w-select">
+                      <option value="Piso de madera">{{ texts.39113658 }}</option>
+                      <option value="Pergolado">{{ texts.-6a2e4f1b }}</option>
+                      <option value="Second">{{ texts.3c4172cd }}</option>
+                      <option value="Deck">{{ texts.2070c9 }}</option>
+                      <option value="Sauna">{{ texts.4bf7bba }}</option>
+                      <option value="Carpintería residencial">{{ texts.68fb3ac9 }}</option>
+                      <option value="Mantenimiento">{{ texts.-18947bda }}</option>
+                      <option value="Fibra de vidrio">{{ texts.37bce494 }}</option>
+                      <option value="Muro verde">{{ texts.-533f0677 }}</option>
+                      <option value="Otro">{{ texts.25ab02 }}</option>
+                    </select><label for="Superficie" class="paragraph">{{ texts.-3ada762e }}</label><input type="text" class="text-field w-input" maxlength="256" name="Superficie" data-name="Superficie" placeholder="" id="Superficie"><label for="Ciudad" class="paragraph">{{ texts.78530878 }}</label><input type="text" class="text-field w-input" maxlength="256" name="Ciudad" data-name="Ciudad" placeholder="" id="Ciudad"><label for="Codigo-postal" class="paragraph">{{ texts.29c3690e }}</label><input type="text" class="text-field w-input" maxlength="256" name="Codigo-postal" data-name="Codigo postal" placeholder="" id="Codigo-postal"><label for="Mensaje-3" class="paragraph">{{ texts.-15f69c }}</label><textarea id="Mensaje-2" name="Mensaje-2" maxlength="5000" data-name="Mensaje 2" placeholder="" class="text-field w-input"></textarea><input type="text" class="bucket-field w-input" maxlength="256" name="bucket" data-name="bucket" placeholder="" id="bucket-id">
+                    <div class="embed-recaptcha">
+                      <div class="html-embed w-embed w-script">
+                        <div class="g-recaptcha" data-sitekey="6LfZp9wUAAAAAElN6hjxGC8JFb3-WClC5dZnz7dZ"></div>
+                        <script>
+function validateRecaptcha() {
+    var response = grecaptcha.getResponse();
+    if (response.length === 0) {
+        alert("Validar formulario No soy un Robot");
+        return false;
+    } 
+}
+</script>
+                      </div>
+                    </div><input type="submit" value="Enviar formulario" data-wait="Un momento" class="boton-naranja full-width w-button">
+                  </form>
+                  <div class="w-form-done">
+                    <div>{{ texts.-6065ad13 }}</div>
+                  </div>
+                  <div class="w-form-fail">
+                    <div>{{ texts.-7c112e99 }}</div>
+                  </div>
+                </div>
